Refactor App component to implement dynamic resume fetching and enhance Card component for better UI representation

--- a/Resume/frontend/index.html
+++ b/Resume/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Resume — Full Stack</title>
+    <title>Resume</title>
 
     <!-- 🎨 Added inline styles with your chosen color scheme -->
     <style>
@@ -88,7 +88,7 @@
           >
             A
           </div>
-          <div style="font-weight: 800">A-Resume</div>
+          <div style="font-weight: 800">Aaryansh</div>
         </div>
 
         <!-- 🔍 Search + download button -->
