Refactor App and Card components to enhance resume display with dynamic card layout and improved styling

--- a/Resume/frontend/index.html
+++ b/Resume/frontend/index.html
@@ -132,16 +132,30 @@
               gap: 12px;
             "
           >
-            <div id="shellEducation">Education — Loading…</div>
-            <div id="shellProjects">Projects — Loading…</div>
-            <div id="shellExperience">Experience — Loading…</div>
-            <div id="shellTimeline">Timeline — Loading…</div>
+            <div class="card card-grid" id="shellEducation">
+              Education — Loading…
+            </div>
+            <div class="card card-grid" id="shellProjects">
+              Projects — Loading…
+            </div>
+            <div class="card card-grid" id="shellExperience">
+              Experience — Loading…
+            </div>
+            <div class="card card-grid" id="shellTimeline">
+              Timeline — Loading…
+            </div>
           </div>
         </section>
 
         <!-- 📌 Sidebar placeholders -->
         <aside style="display: flex; flex-direction: column; gap: 12px">
-          <div>Contact — <span id="shellContact">contact@you.com</span></div>
+          <div>
+            Contact :
+            <a href="aaryanshverma2002@gmail.com" id="shellContact" text="email"
+              >aaryanshverma2002@gmail.com</a
+            >
+          </div>
+          <div>Phone : <span id="shellContact">+91 9910732652</span></div>
           <div>
             Tech Stack —
             <div id="shellTech"></div>
