Enhance Tech Stack display with dynamic card layout and improved styling

--- a/Resume/frontend/index.html
+++ b/Resume/frontend/index.html
@@ -151,13 +151,28 @@
         <aside style="display: flex; flex-direction: column; gap: 12px">
           <div>
             Contact :
-            <a href="aaryanshverma2002@gmail.com" id="shellContact" text="email"
+            <a
+              href="aaryanshverma2002@gmail.com"
+              id="shellContact"
+              text="email"
+              style="color: black; text-decoration: none"
               >aaryanshverma2002@gmail.com</a
             >
           </div>
           <div>Phone : <span id="shellContact">+91 9910732652</span></div>
           <div>
-            Tech Stack —
+            Tech Stack :
+            <div class="card-2 card-grid">C</div>
+            <div class="card-2 card-grid">C++</div>
+            <div class="card-2 card-grid">Python</div>
+            <div class="card-2 card-grid">Java</div>
+            <div class="card-2 card-grid">HTML</div>
+            <div class="card-2 card-grid">CSS</div>
+            <div class="card-2 card-grid">Javascript</div>
+            <div class="card-2 card-grid">COBOL</div>
+            <div class="card-2 card-grid">Shell script</div>
+            <div class="card-2 card-grid">SQL</div>
+            <div class="card-2 card-grid">Unix/Linux</div>
             <div id="shellTech"></div>
           </div>
         </aside>
