Update resume shell with personal details and enhance tech stack links for better accessibility

--- a/Resume/frontend/index.html
+++ b/Resume/frontend/index.html
@@ -119,9 +119,17 @@
       >
         <section>
           <div style="background: #fff; padding: 16px; border-radius: 10px">
-            <h1 id="shellName">Your Name</h1>
+            <h1 id="shellName">Aaryansh Verma</h1>
             <p id="shellTitle">Full Stack Developer</p>
-            <p id="shellSummary">Loading summary…</p>
+            <p id="shellSummary">
+              Versatile Software Developer with a B.Tech in Computer Science
+              (AI/ML specialization) and hands-on experience as a Mainframe
+              Developer in a leading MNC. Skilled in Java, Spring Boot, and SQL,
+              with a growing passion for applying AI/ML techniques to enhance
+              real-world applications. Strong in building scalable backend
+              systems and eager to bridge enterprise development with
+              intelligent, data-driven solutions.
+            </p>
           </div>
           <!-- 🔧 Shell placeholders for main sections -->
           <div
@@ -162,18 +170,47 @@
           <div>Phone : <span id="shellContact">+91 9910732652</span></div>
           <div>
             Tech Stack :
-            <div class="card-2 card-grid">C</div>
-            <div class="card-2 card-grid">C++</div>
-            <div class="card-2 card-grid">Python</div>
-            <div class="card-2 card-grid">Java</div>
-            <div class="card-2 card-grid">HTML</div>
-            <div class="card-2 card-grid">CSS</div>
-            <div class="card-2 card-grid">Javascript</div>
-            <div class="card-2 card-grid">COBOL</div>
-            <div class="card-2 card-grid">Shell script</div>
-            <div class="card-2 card-grid">SQL</div>
-            <div class="card-2 card-grid">Unix/Linux</div>
-            <div id="shellTech"></div>
+            <a href="https://devdocs.io/c/" class="card-2 card-grid">C</a>
+            <a href="https://devdocs.io/cpp/" class="card-2 card-grid">C++</a>
+            <a href="https://docs.python.org/3/" class="card-2 card-grid"
+              >Python</a
+            >
+            <a href="https://docs.oracle.com/en/java/" class="card-2 card-grid"
+              >Java</a
+            >
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              class="card-2 card-grid"
+              >HTML</a
+            >
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+              class="card-2 card-grid"
+              >CSS</a
+            >
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+              class="card-2 card-grid"
+              >Javascript</a
+            >
+            <a
+              href="https://www.microfocus.com/documentation/visual-cobol/vc60/VS2017/GUID-D84DDFBC-3D1E-47B1-8DEF-26B322C321F6.html"
+              class="card-2 card-grid"
+              >COBOL</a
+            >
+            <a href="https://www.shellscript.sh/" class="card-2 card-grid"
+              >Shell script</a
+            >
+            <a
+              href="https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/"
+              class="card-2 card-grid"
+              >SQL</a
+            >
+            <a
+              href="https://www.geeksforgeeks.org/linux-unix/linux-tutorial/"
+              class="card-2 card-grid"
+              >Unix/Linux</a
+            >
           </div>
         </aside>
       </main>
